Fixing width issue of #main on xs
#main was slightly too wide on xs devices, this was fixed by adding a
small padding l/r to it.

The navbar must behave more like container instead of container-fluid!!

--- a/css/main.scss
+++ b/css/main.scss
@@ -19,3 +19,10 @@ $it-color: #09CDDA;
 .department nav {
     margin-bottom: 2em;
 }
+
+#main { /*Fix for the width on xs devices where #main becomes slightly too wide*/
+    padding-left: 3em;
+    padding-right: 3em;
+}
+
+
